# Pong

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat
src/: CMakeLists.txt  main.cpp  version.h.in
src/Engine/: CMakeLists.txt
src/Engine/Entity/: CMakeLists.txt  Entity.cpp  Entity.h
src/Engine/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Engine/Random/: CMakeLists.txt  Random.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Text/: CMakeLists.txt  Text.cpp  Text.h
src/Engine/Vec2D/: CMakeLists.txt  Vec2D.cpp  Vec2D.h
src/Engine/Window/: CMakeLists.txt  Window.cpp
src/Game/: CMakeLists.txt  Game.cpp  Game.h
src/Pong/: CMakeLists.txt
src/Pong/Ball/: Ball.cpp  Ball.h  CMakeLists.txt
src/Pong/Net/: CMakeLists.txt  Net.cpp  Net.h
src/Pong/Paddle/: CMakeLists.txt  Paddle.cpp  Paddle.h
src/PongLib/: CMakeLists.txt
src/PongLib/Ball/: Ball.cpp  Ball.h  CMakeLists.txt
src/PongLib/Net/: Net.cpp  Net.h
src/PongLib/Paddle/: CMakeLists.txt  Paddle.cpp  Paddle.h
src/PongLib/PlayerScore/: CMakeLists.txt  PlayerScore.cpp  PlayerScore.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Vec2D/: Vec2D.h
src/Window/: CMakeLists.txt  Window.h
